--- a/app/styles/components/c-list_posts.scss
+++ b/app/styles/components/c-list_posts.scss
@@ -3,6 +3,10 @@
 @import '../base/screen.scss';
 .c-list-posts {
   font-family: $font-family-primary;
+  .article-post{
+    margin-top: 60px;
+    margin-bottom: 110px;
+  }
   article {
     h2 {
       font-size: $font-size-large;
