--- a/app/styles/components/c-list_posts.scss
+++ b/app/styles/components/c-list_posts.scss
@@ -5,6 +5,7 @@
   font-family: $font-family-primary;
   .article-post{
     margin-top: 60px;
+    margin-bottom: 110px;
   }
   article {
     h2 {
