--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700);
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
 
 // Font families
 $font-family-1: 'Roboto', sans-serif;
@@ -25,6 +25,9 @@ $color-2:  #021236;
 $color-3:  #8abbc7;
 $color-4:  #fff;
 $color-5:  #b8b8b8;
+$color-6:  #ef4323;
+$color-7:  #294480;
+$color-8:  #18306d;
 
 // Breakpoints
 $breakpoint-mobile-small:  320px;
