--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -1,7 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700);
 
 // Font families
 $font-family-1: 'Roboto', sans-serif;
+$font-family-2: 'Roboto Slab', serif;
 
 // Font sizes
 $font-size-tiny:      10px;
@@ -12,6 +14,7 @@ $font-size-medium:    20px;
 $font-size-x-medium:  25px;
 $font-size-big:       30px;
 $font-size-x-big:     34px;
+$font-size-xx-big:    40px;
 $font-size-huge:     100px;
 
 // Font weights
@@ -25,6 +28,11 @@ $color-2:  #021236;
 $color-3:  #8abbc7;
 $color-4:  #fff;
 $color-5:  #b8b8b8;
+$color-6:  #4a4a4a;
+$color-7:  #18306d;
+$color-8:  #e8f4f9;
+$color-9:  #294480;
+$color-10:  #ef4323;
 
 // Breakpoints
 $breakpoint-mobile-small:  320px;
