--- a/app/styles/components/c-list_posts.scss
+++ b/app/styles/components/c-list_posts.scss
@@ -1,77 +1,89 @@
-@import '../base/text.scss';
-@import '../base/colors.scss';
-@import '../base/screen.scss';
+@import '../_settings.scss';
+
 .c-list-posts {
-  font-family: $font-family-primary;
-  .article-post{
-    margin-top: 60px;
+  font-family: $font-family-1;
+
+  .article-post {
     margin-bottom: 110px;
+    margin-top: 60px;
   }
+
   article {
+
     h2 {
-      font-size: $font-size-large;
-      font-weight: $font-weight-regular;
-      line-height: 1.05;
-      color: $color7;
+      color: $color-6;
       display: block;
+      font-size: $font-size-xx-big;
+      font-weight: $font-weight-normal;
+      line-height: 1.05;
       margin: 60px auto 18px;
-      width: 100%;
       max-width: 700px;
+      width: 100%;
     }
+
     span {
+
       p {
-        font-size: $font-size-normal;
-        font-family: $font-family-secondary;
-        font-weight: $font-weight-regular;
-        line-height: 1.63;
-        color: $color7;
+        color: $color-6;
         display: block;
-        margin: 0px auto 18px;
-        width: 100%;
+        font-family: $font-family-2;
+        font-size: $font-size-normal;
+        font-weight: $font-weight-normal;
+        line-height: 1.63;
+        margin: 0 auto 18px;
         max-width: 700px;
+        width: 100%;
       }
+
     }
+
     div {
       width: initial !important;
     }
+
     img {
-      margin: 0 auto;
       display: block;
-      width: 100%;
       height: 100%;
-      max-width: 1060px;
+      margin: 0 auto;
       margin-bottom: 18px;
+      max-width: 1060px;
+      width: 100%;
     }
   }
+
   .button-more {
-    width: 100%;
-    max-width: 700px;
-    margin: 0 auto;
     display: block;
+    margin: 0 auto;
+    max-width: 700px;
+    width: 100%;
+
     a {
-      display: flex;
       align-items: center;
-      text-decoration: none;
-      font-family: $font-family-primary;
-      font-weight: $font-weight-bold;
-      line-height: 0.4;
-      letter-spacing: -0.1px;
+      color: $color-7;
+      display: flex;
+      font-family: $font-family-1;
       font-size: $font-size-small;
-      color: $color6;
+      font-weight: $font-weight-bold;
+      letter-spacing: -.1px;
+      line-height: .4;
       margin-top: 45px;
+      text-decoration: none;
+
       img {
-        width: 35px;
-        margin-right: 7px;
-        margin-left: -5px;
         margin-bottom: 0;
+        margin-left: -5px;
+        margin-right: 7px;
+        width: 35px;
       }
     }
   }
-  hr{
+
+  hr {
+    background-color: $color-8;
     height: 2px;
-    background-color: $color8;
     margin-top: 65px;
-    &:after{
+
+    &::after {
       display: none;
     }
   }
