--- a/app/styles/components/c-pagination-blog.scss
+++ b/app/styles/components/c-pagination-blog.scss
@@ -1,48 +1,55 @@
-@import '../base/text.scss';
-@import '../base/colors.scss';
+@import '../_settings.scss';
+
 .c-pagination-blog {
-  padding: 65px 290px;
-  background-color: $color8;
+  background-color: $color-8;
   margin-top: 90px;
+  padding: 65px 290px;
+
   div {
-    width: 100%;
-    max-width: 700px;
-    margin: 0 auto;
-    display: flex;
     align-items: center;
+    display: flex;
     justify-content: space-between;
+    margin: 0 auto;
+    max-width: 700px;
+    width: 100%;
+
     img {
+      cursor: pointer;
       width: 40px;
     }
-    .right-triangle {}
+
     .left-triangle {
+      opacity: .5;
       transform: rotate(180deg);
-      opacity: 0.5;
     }
+
     ul {
       list-style: none;
+
       li {
-        display: inline-block;
-        font-size: $font-size-small;
-        font-family: $font-family-primary;
+        color: $color-7;
         cursor: pointer;
-        color: $color6;
+        display: inline-block;
+        font-family: $font-family-1;
+        font-size: $font-size-small;
         margin-right: 20px;
-        width: 14px;
         text-align: center;
-        &:after {
+        width: 14px;
+
+        &::after {
           margin-right: 0;
         }
       }
     }
+
     .page-selected {
-      &:after {
-        content: "";
+      &::after {
+        background-color: $color-10;
+        border-radius: 100px;
+        content: '';
         display: block;
         height: 4px;
         margin: 4px auto 0;
-        border-radius: 100px;
-        background-color: red;
       }
     }
   }
