--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 /*Base*/
+@import 'base';
 @import 'base/normalize.scss';
 @import 'base/slick.scss';
 @import 'base/text.scss';
@@ -29,7 +30,4 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  > div, > div > div, > div > div > div {
-    height: 100%;
-  }
 }
