--- a/app/styles/components/c-info-map-content.scss
+++ b/app/styles/components/c-info-map-content.scss
@@ -1,5 +1,4 @@
-@import '../base/text.scss';
-@import '../base/colors.scss';
+@import '../_settings.scss';
 
 .c_info_map_content {
   width: 360px;
@@ -7,30 +6,30 @@
     font-size: 14px;
     font-weight: $font-weight-bold;
     letter-spacing: -0.1px;
-    color: $color9;
-    &:after {
+    color: $color-4;
+    &::after {
       content: " ";
       display: block;
       height: 3px;
-      background-color: $color9;
+      background-color: $color-4;
       margin-top: 16px;
       margin-bottom: 12px;
       width: 50px;
     }
   }
   h3 {
-    font-size: $font-size-large;
-    font-weight: $font-weight-regular;
+    font-size: $font-size-xx-big;
+    font-weight: $font-weight-normal;
     line-height: 1.05;
-    color: $color9;
+    color: $color-4;
     margin-bottom: 0;
     margin-top: 0;
   }
   p {
     font-size: $font-size-normal;
-    font-weight: $font-weight-regular;
+    font-weight: $font-weight-normal;
     line-height: 1.25;
-    color: $color9;
+    color: $color-4;
     margin-top: 20px;
   }
 }
