--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -10,7 +10,7 @@
 /*Components*/
 @import 'components/c_input_button.scss';
 @import 'components/c_header.scss';
-@import 'components/c_cover_page.scss';
+@import 'components/c-cover-page.scss';
 @import 'components/c_map.scss';
 @import 'components/map/c-timeline.scss';
 /*Layout*/
