update styles from home page

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -18,9 +18,9 @@ $font-size-xx-big:    40px;
 $font-size-huge: 100px;
 
 // Font weights
-$font-weight-light: 300;
+$font-weight-light:  300;
 $font-weight-normal: 400;
-$font-weight-bold: 700;
+$font-weight-bold:   700;
 
 // Colors
 $color-1: #011137;
@@ -33,15 +33,16 @@ $color-7: #294480;
 $color-8: #18306d;
 $color-9: #4a4a4a;
 $color-10: #e8f4f9;
+$color-11: #0d1a34;
 
 // Breakpoints
-$breakpoint-mobile-small: 320px;
-$breakpoint-mobile-large: 425px;
-$breakpoint-tablet: 768px;
-$breakpoint-laptop: 1024px;
+$breakpoint-mobile-small:  320px;
+$breakpoint-mobile-large:  425px;
+$breakpoint-tablet:        768px;
+$breakpoint-laptop:       1024px;
 
 // Media queries
 $mq-mobile-small: 'screen and (min-width: #{$breakpoint-mobile-small})';
 $mq-mobile-large: 'screen and (min-width: #{$breakpoint-mobile-large})';
-$mq-tablet: 'screen and (min-width: #{$breakpoint-tablet})';
-$mq-laptop: 'screen and (min-width: #{$breakpoint-laptop})';
+$mq-tablet:       'screen and (min-width: #{$breakpoint-tablet})';
+$mq-laptop:       'screen and (min-width: #{$breakpoint-laptop})';
