--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -25,6 +25,10 @@ html {
   padding: 0;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .full-height-container,
 body > div > div > div { // FIXME: add .full-height-container to each page root div
   height: 100%;
