--- a/app/styles/components/c_map.scss
+++ b/app/styles/components/c_map.scss
@@ -44,9 +44,9 @@ $corporateColor: #233e76;
   }
 }
 
-.timeline_container {
-  background-color: #021437;
-  height: 250px;
+.timebar_container {
+  background-color: #ccc;
+  height: 70px;
   position: absolute;
   bottom: 0px;
   left: 0px;
@@ -55,6 +55,6 @@ $corporateColor: #233e76;
 }
 
 .map_container {
-  height: calc(100% - 140px);;
+  height: calc(100% - 140px);
   position: relative;
 }
