--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -12,6 +12,7 @@
 @import 'components/c_header.scss';
 @import 'components/c_cover_page.scss';
 @import 'components/c_map.scss';
+@import 'components/map/c-timebar.scss';
 @import 'components/map/c-timeline.scss';
 /*Layout*/
 @import 'layout/l-homepage.scss';
