timeline graph styles

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -28,6 +28,7 @@ $color-5: #b8b8b8;
 $color-6: #ef4323;
 $color-7: #294480;
 $color-8: #18306d;
+$color-9: #2c5197;
 
 // Breakpoints
 $breakpoint-mobile-small: 320px;
