--- a/app/styles/components/map/c-timebar.scss
+++ b/app/styles/components/map/c-timebar.scss
@@ -1,15 +1,19 @@
 @import '../../settings';
 
 .c-timebar {
+  background-color: $color-1;
   display: flex;
   height: 100%;
+
   .c-timebar-element {
     height: 100%;
   }
+
   .c-timebar-datepicker {
     text-align: center;
     width: 100px;
   }
+
   .c-timebar-playback {
     text-align: center;
     width: 100px;
