--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -14,6 +14,7 @@
 @import 'components/c_map.scss';
 @import 'components/map/c-timebar.scss';
 @import 'components/map/c-timeline.scss';
+@import 'components/map/c-datepicker.scss';
 /*Layout*/
 @import 'layout/l-homepage.scss';
 
