--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -1,12 +1,23 @@
-@import 'settings';
+@import '_settings';
 
-*, *:before, *:after {
+* {
   box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+  &::after {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    box-sizing: border-box;
+  }
+
+  &::before {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    box-sizing: border-box;
+  }
 }
 
-html, body {
+body,
+html {
   font-family: $font-family-1;
   font-size: $font-size-normal;
   font-weight: $font-weight-normal;
