--- a/app/styles/components/c_layer_panel.scss
+++ b/app/styles/components/c_layer_panel.scss
@@ -80,9 +80,8 @@
     padding-left: 30px;
   }
   input[type="checkbox"] {
-    background-image: -webkit-linear-gradient(hsla(0, 0%, 0%, .1), hsla(0, 0%, 100%, .1)), -webkit-linear-gradient(left, #c7c7c7 50%, #ef4323 50%);
+    background: linear-gradient(to bottom, hsla(0, 0%, 0%, .1), hsla(0, 0%, 100%, .1)), linear-gradient(to right, #c7c7c7 50%, currentColor 50%) 0 0, 5px 0;
     background-size: 100% 100%, 200% 100%;
-    background-position: 0 0, 5px 0;
     border-radius: 25px;
     cursor: pointer;
     height: 10px;
@@ -95,8 +94,7 @@
     margin-right: 8px;
   }
   input[type="checkbox"]:after {
-    background-color: #eee;
-    background-image: -webkit-linear-gradient(hsla(0, 0%, 100%, .1), hsla(0, 0%, 0%, .1));
+    background: #eee -webkit-linear-gradient(hsla(0, 0%, 100%, .1), hsla(0, 0%, 0%, .1));
     border-radius: 25px;
     content: '';
     display: block;
