update styles and fix errors

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -33,6 +33,7 @@ $color-7:  #18306d;
 $color-8:  #e8f4f9;
 $color-9:  #294480;
 $color-10:  #ef4323;
+$color-11:  #0d1a34;
 
 // Breakpoints
 $breakpoint-mobile-small:  320px;
