--- a/app/styles/components/c-control_panel.scss
+++ b/app/styles/components/c-control_panel.scss
@@ -1,13 +1,12 @@
 @import '../base/text.scss';
 @import '../base/colors.scss';
 
-.layerPanel {
+.controlPanel {
   font-family: $font-family-primary;
   position: absolute;
-  background: $color9;
   z-index: 10;
   right: 0;
-  background-color: $color12;
+  background: $color12;
   width: 320px;
   max-width: 320px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
@@ -19,9 +18,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 30px;
-    .content_box {
-      display: flex;
-    }
   }
   .input_accordion {
     line-height: 3;
@@ -75,8 +71,6 @@
     line-height: 2;
     text-transform: uppercase;
     padding-bottom: 30px;
-  }
-  .list_checkbox {
     padding-left: 30px;
   }
   input[type="checkbox"] {
@@ -135,7 +129,6 @@
   }
   .button_advanced_search {
     width: 260px;
-    margin: 0 auto;
     background-color: $color5;
     display: block;
     font-size: $font-size-small;
