--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -27,7 +27,7 @@
     }
   }
 
-  .title_cover_blog {
+  .cover-main-title {
 
     &::after {
       background-color: $color-6;
@@ -79,7 +79,7 @@
     }
   }
 
-  .footer_header_blog {
+  .footer_header {
     align-items: center;
     color: $color-4;
     display: flex;
@@ -89,7 +89,7 @@
     padding-right: 170px;
   }
 
-  .title-cover-blog-detail {
+  .cover-sub-title {
     font-family: $font-family-1;
     font-size: $font-size-medium;
     font-weight: $font-weight-bold;
@@ -112,7 +112,7 @@
     }
   }
 
-  .title-post-detail {
+  .cover-sub-subtitle {
     font-family: $font-family-1;
     font-size: $font-size-huge;
     font-weight: $font-weight-bold;
