--- a/app/styles/components/c_map.scss
+++ b/app/styles/components/c_map.scss
@@ -1,3 +1,5 @@
+@import '../layout-settings';
+
 $corporateColor: #233e76;
 
 .map {
@@ -45,7 +47,7 @@ $corporateColor: #233e76;
 }
 
 .timebar_container {
-  height: 70px;
+  height: $timebar-height;
   position: absolute;
   bottom: 0px;
   left: 0px;
