update home page

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -10,6 +10,7 @@ $font-size-tiny:      10px;
 $font-size-x-small:   12px;
 $font-size-small:     14px;
 $font-size-normal:    16px;
+$font-size-x-normal:  18px;
 $font-size-medium:    20px;
 $font-size-x-medium:  25px;
 $font-size-big:       30px;
