update styles and fix error menu header

--- a/app/styles/components/c-menu.scss
+++ b/app/styles/components/c-menu.scss
@@ -10,6 +10,16 @@
   }
 }
 
+.c-header-menu-transparent{
+  background-color: transparent;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  padding: 0 110px;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    box-shadow: none;
+  }
+}
+
 .c-menu {
   img {
     height: 70px;
