--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -11,6 +11,7 @@ html, body {
   font-size: $font-size-normal;
   font-weight: $font-weight-normal;
   margin: 0;
+  overflow-x: hidden;
   padding: 0;
 }
 
