--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -3,14 +3,16 @@
 .c-cover-page {
   background-color: $color-9;
   background-image: url('../../assets/images/ship_1.jpg');
-  background-size: cover;
   background-position: center;
-  .layer-cover{
-    background-color: rgba(23, 64, 132, 0.8);
-    top: 0;
-    left: 0;
-    width: 100%;
+  background-size: cover;
+  transition: background-image .2s ease-in-out;
+
+  .layer-cover {
+    background-color: rgba($color-9, .8);
     height: 100%;
+    left: 0;
+    top: 0;
+    width: 100%;
   }
 
   .dots-cover {
