--- a/app/styles/components/c-box-triangle.scss
+++ b/app/styles/components/c-box-triangle.scss
@@ -1,13 +1,15 @@
 @import '../_settings.scss';
 
 .c-box-triangle {
+
   border-bottom: 2px solid $color-4;
   border-right: 2px solid $color-4;
   cursor: pointer;
   height: 52px;
-  margin: 0 auto;
+  left: 50%;
   margin-bottom: -130px;
-  transform: rotate(-135deg);
+  position: relative;
+  transform: translateX(-50%) rotate(-135deg);
   width: 52px;
 
   .triangle-min {
