--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -11,8 +11,11 @@ html, body {
   font-size: $font-size-normal;
   font-weight: $font-weight-normal;
   margin: 0;
-  overflow-x: hidden;
   padding: 0;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 .full-height-container,
