--- a/app/styles/components/c-box-triangle.scss
+++ b/app/styles/components/c-box-triangle.scss
@@ -18,7 +18,8 @@
     height: 12px;
     margin-bottom: 0;
     margin-left: 32px;
-    margin-top: 32px;
+    position: absolute;
+    top: 0;
     transform: rotate(-180deg);
     width: 12px;
   }
