--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -19,7 +19,7 @@
     list-style: none;
     padding-left: 110px;
     position: relative;
-    top: 25px;
+    top: 0px;
 
     :global .slick-active {
       button {
@@ -88,6 +88,7 @@
     margin-top: 0;
     max-width: 1280px;
     padding-left: 110px;
+    padding-right: 110px;
     padding-top: 170px;
 
     &::after {
