--- a/app/styles/components/c-box-triangle.scss
+++ b/app/styles/components/c-box-triangle.scss
@@ -19,7 +19,7 @@
     margin-bottom: 0;
     margin-left: 32px;
     position: absolute;
-    top: 0;
+    top: 32px;
     transform: rotate(-180deg);
     width: 12px;
   }
