--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -19,7 +19,7 @@
     list-style: none;
     padding-left: 110px;
     position: relative;
-    top: 25px;
+    top: 0;
 
     :global .slick-active {
       button {
