--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -10,17 +10,18 @@ $font-size-tiny: 10px;
 $font-size-x-small: 12px;
 $font-size-small: 14px;
 $font-size-normal: 16px;
+$font-size-x-normal: 18px;
 $font-size-medium: 20px;
 $font-size-x-medium: 25px;
 $font-size-big: 30px;
 $font-size-x-big: 34px;
-$font-size-xx-big:    40px;
+$font-size-xx-big: 40px;
 $font-size-huge: 100px;
 
 // Font weights
-$font-weight-light:  300;
+$font-weight-light: 300;
 $font-weight-normal: 400;
-$font-weight-bold:   700;
+$font-weight-bold: 700;
 
 // Colors
 $color-1: #011137;
@@ -36,13 +37,13 @@ $color-10: #e8f4f9;
 $color-11: #0d1a34;
 
 // Breakpoints
-$breakpoint-mobile-small:  320px;
-$breakpoint-mobile-large:  425px;
-$breakpoint-tablet:        768px;
-$breakpoint-laptop:       1024px;
+$breakpoint-mobile-small: 320px;
+$breakpoint-mobile-large: 425px;
+$breakpoint-tablet: 768px;
+$breakpoint-laptop: 1024px;
 
 // Media queries
 $mq-mobile-small: 'screen and (min-width: #{$breakpoint-mobile-small})';
 $mq-mobile-large: 'screen and (min-width: #{$breakpoint-mobile-large})';
-$mq-tablet:       'screen and (min-width: #{$breakpoint-tablet})';
-$mq-laptop:       'screen and (min-width: #{$breakpoint-laptop})';
+$mq-tablet: 'screen and (min-width: #{$breakpoint-tablet})';
+$mq-laptop: 'screen and (min-width: #{$breakpoint-laptop})';
