Home slider backgrounds

--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -1,7 +1,7 @@
 @import '../_settings.scss';
 
 .c-cover-page {
-  background: $color-7 url('../../assets/images/ship_1.jpg') center;
+  background: $color-7 url('../../assets/images/home_slider_1-1.png') center;
   background-size: cover;
   transition: background-image .2s ease-in-out;
 
