--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -35,6 +35,7 @@ $color-8: #18306d;
 $color-9: #4a4a4a;
 $color-10: #e8f4f9;
 $color-11: #0d1a34;
+$color-12: #000;
 
 // Breakpoints
 $breakpoint-mobile-small: 320px;
