--- a/app/styles/components/c-menu.scss
+++ b/app/styles/components/c-menu.scss
@@ -1,8 +1,8 @@
 @import '../_settings.scss';
 
 .c-header-menu {
-  background-color: rgba(23, 64, 132, 0.8);
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  background-color: rgba($color-7, .8);
+  box-shadow: 0 2px 4px 0 rgba($color-12, .5);
   padding: 0 110px;
 
   @media screen and (min-width: $breakpoint-tablet) {
@@ -12,7 +12,7 @@
 
 .c-header-menu-transparent {
   background-color: transparent;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 4px 0 rgba($color-12, .5);
   padding: 0 110px;
 
   @media screen and (min-width: $breakpoint-tablet) {
@@ -32,14 +32,15 @@
   height: 80px;
   justify-content: space-between;
   line-height: 30px;
-  text-transform: capitalize;
   text-align: justify;
-  align-items: center;
-  &::after{
+  text-transform: capitalize;
+
+  &::after {
     content: '';
     display: inline-block;
     width: 100%;
   }
+
   ul {
     display: none;
   }
@@ -84,53 +85,57 @@
     }
 
     ul {
-      display: block;
-      list-style: none;
       display: inline-block;
-      vertical-align: middle;
-      text-align: right;
-      position: relative;
+      list-style: none;
       min-width: 100%;
       padding-right: 110px;
-      &::after{
-        content: ""; clear:both; display: block;
+      position: relative;
+      text-align: right;
+      vertical-align: middle;
+
+      &::after {
+        clear: both;
+        content: '';
+        display: block;
       }
+
       li {
         display: inline-block;
-        margin-right: 25px;
-        display: inline-block;
-        padding: 0 0.6em;
-        white-space: nowrap;
+        margin-right: 20px;
+        padding: 0 .6em;
         position: relative;
+        white-space: nowrap;
 
         &:nth-last-child(2) {
-          margin-right: 25px;
+          margin-right: 20px;
         }
 
         &:last-child {
           border-left: 1px solid $color-4;
           margin-right: 0;
-          padding-left: 25px;
+          padding-left: 20px;
         }
 
         a {
           color: $color-4;
           cursor: pointer;
+          display: inline-block;
+
           font-family: $font-family-1;
           font-size: $font-size-normal;
           font-weight: $font-weight-normal;
-          letter-spacing: -.1px;
-          text-decoration: none;
-          display: inline-block;
-          vertical-align: middle;
-          text-align: left;
           height: 100%;
-          &::before{
-            display: inline-block;
-            vertical-align: middle;
-            text-align: left;
+          letter-spacing: -.1px;
+          text-align: left;
+          text-decoration: none;
+          vertical-align: middle;
+
+          &::before  {
             content: '';
+            display: inline-block;
             height: 100%;
+            text-align: left;
+            vertical-align: middle;
           }
         }
 
@@ -155,13 +160,17 @@
     .dropdown-content {
       background-color: $color-4;
       display: none;
+      left: 50%;
+      min-width: 160px;
       padding: 15px;
       position: absolute;
       top: 100%;
-      left:50%;
-      transform:translateX(-50%);
-      min-width: 160px;
+      transform: translateX(-50%);
       z-index: 99;
+
+      &:last-child {
+        margin-left: 12px;
+      }
 
       li {
         display: block;
@@ -179,6 +188,7 @@
           text-align: center;
           text-transform: uppercase;
           transition: .2s;
+
           &:hover {
             background-color: $color-3;
             opacity: .6;
