delete important rules on scss files

--- a/app/styles/components/c-menu.scss
+++ b/app/styles/components/c-menu.scss
@@ -171,8 +171,8 @@
       li {
         display: block;
         line-height: 40px;
-        margin-right: 0 !important;
-        padding-left: 0 !important;
+        margin-right: 0;
+        padding-left: 0;
 
         a {
           color: $color-11;
