--- a/app/styles/components/c-menu.scss
+++ b/app/styles/components/c-menu.scss
@@ -101,21 +101,23 @@
         white-space: normal;
 
         &:nth-last-child(2) {
-          margin-right: 0px;
-          &::after{
+          margin-right: 0;
+
+          &::after {
+            border-left: 1px solid $color-4;
             content: '';
             display: inline-block;
-            border-left: 1px solid #fff;
             height: 25px;
+            left: 20px;
             position: relative;
             top: 8px;
-            left: 20px;
           }
         }
+
         &:last-child {
+          margin-left: 40px;
           margin-right: 0;
           padding-left: 0;
-          margin-left: 40px;
         }
 
         a {
@@ -186,16 +188,18 @@
         }
 
         &:nth-last-child(2) {
-          &::after{
+
+          &::after {
             content: none;
             display: none;
           }
         }
+
         &:last-child {
-          margin-right: 0;
-          padding-left: 0;
           border-left: 0;
           margin-left: 0;
+          margin-right: 0;
+          padding-left: 0;
         }
       }
     }
@@ -215,12 +219,15 @@
 
       li {
         margin-right: 65px;
+
         &:nth-last-child(2) {
-          margin-right: 0px;
-          &::after{
+          margin-right: 0;
+
+          &::after {
             left: 65px;
           }
         }
+
         &:last-child {
           margin-left: 130px;
         }
